# FlareTorch

./: .agrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  main.py  pyproject.toml
FlareTorch/: pyproject.toml
FlareTorch/configs/: CP_resnet34_calibration.yaml  MCD_resnet18_train.yaml  MCD_resnet34_train.yaml  QR_resnet18_train.yaml  QR_resnet34_train.yaml  resnet34_calibration.yaml  resnet_helioviewer_config.yaml
FlareTorch/datamodules/: flare.py
FlareTorch/datasets/: __init__.py  flare_magnetogram.py
FlareTorch/models/: base.py
FlareTorch/src/FlareTorch/datamodules/: __init__.py  flare.py
FlareTorch/src/FlareTorch/datasets/: __init__.py  flare_cls_datasets.py  flare_magnetogram.py
FlareTorch/src/FlareTorch/explainability/: conformalization.py  poshoc_uc.py
FlareTorch/src/FlareTorch/models/: __init__.py  backbone.py  module.py
FlareTorch/src/FlareTorch/tasks/: calibration.py  training.py
FlareTorch/src/FlareTorch/utils/: callbacks.py  compute_sum_pixels_for_each_data.py  index_file_creator.py  logging.py  losses.py
FlareTorch/tasks/: training.py
FlareTorch/utils/: __init__.py  logging.py
assets/: log_mag_stat.yaml
configs/: CLS_resnet18_calibration_surya_bench.yaml  CP_resnet34_calibration.yaml  MCD_resnet18_train_surya_bench.yaml  MCD_resnet34_train.yaml  QR_resnet18_calibration_surya_bench.yaml  QR_resnet18_train.yaml  QR_resnet18_train_surya_bench.yaml  QR_resnet34_train.yaml  alexnet_helioviewer_config.yaml  resnet34_calibration.yaml
configs/base/: resnet34_calibration.yaml
configs/cls/: CLS_resnet18_train_surya_bench.yaml
configs/cp/: CP_resnet34_calibration.yaml
configs/mcd/: MCD_resnet18_train.yaml  MCD_resnet18_train_surya_bench.yaml  MCD_resnet34_train.yaml
configs/qr/: QR_resnet18_train_surya_bench.yaml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  quickstart.rst
scripts/: add_max_intensity.py  calibration.py  cls_calibration.py  run_slurm.sh  run_slurm_training.sh  training.py
scripts/analysis/: prediction_set_analysis.ipynb
scripts/data/: reorganize_zarr.py  resize_to_zarr.py
scripts/experiments/: cls_calibration.py
shell_scripts/: run_slurm_calibration.sh  run_slurm_pixelsum_testset.sh  run_slurm_training.sh
shell_scripts/arctic/: calibration.sh  training.sh
src/flaretorch/: __init__.py
src/flaretorch/cli/: __init__.py  eval.py  train.py
src/flaretorch/datamodules/: __init__.py  flare.py
src/flaretorch/datasets/: __init__.py  flare_cls_datasets.py
src/flaretorch/explainability/: __init__.py  poshoc_uc.py
src/flaretorch/metrics/: classification_metrics.py
src/flaretorch/models/: backbone.py  module.py
src/flaretorch/tasks/: calibration.py  training.py
src/flaretorch/utils/: callbacks.py  compute_dataset_stats_for_zarr.py  compute_sum_pixels_for_each_data.py  wandb_logging.py
tests/: conftest.py  test_datasets.py  test_models.py  test_new_wrappers.py  test_uq_metrics.py
tmp/: check_zarr.py
