[project]
name = "FlareTorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask>=2025.11.0",
    "datasets>=4.4.1",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "terratorch>=1.1.1",
    "terratorch-surya>=0.1.0",
    "transformers>=4.36.0", 
]
